--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#custom game rules properties
+pointsystem.battingpoints.runs=10
+pointsystem.battingpoints.boundary=4
+pointsystem.bowlingpoints.wicket=1
+pointsystem.bowlingpoints.boundary=4
+pointsystem.fieldingpoints.boundary=4
+pointsystem.otherpoints.captain=4
